[gd_scene load_steps=3 format=3 uid="uid://cx1yvy52wirqw"]

[ext_resource type="Script" path="res://gave_lose.gd" id="1_38w01"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ak3b7"]
bg_color = Color(0.501961, 0.737255, 0.980392, 1)

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38w01")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 96.0
offset_right = 1080.0
offset_bottom = 680.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ak3b7")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 96.0
offset_right = 1072.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 85
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 208.0
offset_right = 1080.0
offset_bottom = 304.0
theme_override_font_sizes/font_size = 65
text = "You Lose !!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 328.0
offset_right = 840.0
offset_bottom = 424.0
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 448.0
offset_right = 840.0
offset_bottom = 544.0
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 560.0
offset_right = 840.0
offset_bottom = 656.0
theme_override_font_sizes/font_size = 50
text = "restart"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
